3.11 Fixed horizontal scrolling problem caused by incorrect bootsrap row and container class naming

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -11,10 +11,14 @@ $footer-background-color: #81A677;
 $body-text-color: #697F8C;
 $hyperlink-color: #BF4E4E;
 
+* {
+	box-sizing: border-box;
+}
 
 html, body {
 	margin: 0;
 	height: 100%;
+	// overflow-x: hidden;
 }
 
 body {
